--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <title>Support Desk  | Siva Prasad Mukherjee</title>
-<link rel="icon" href="https://spmukherjee.in/spmhq.ico">
+<link rel="icon" href="https://spmukherjee.in/spm.ico">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
