--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
 	<script>
 	  function redirect() {
 		setTimeout(function(){ 
-				window.location.replace("https://www.oitg.xyz");
+				window.location.replace("https://spmukherjee.in/home.html");
 			}
 			, 100);	
 		}
